--- a/portal/src/graphql/adminapi/AuditLogScreen.module.css
+++ b/portal/src/graphql/adminapi/AuditLogScreen.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 .header {
@@ -17,17 +17,19 @@
   flex: 1 1 0px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .commandBarContainerContent {
   display: flex;
   flex-direction: column;
   padding: 24px;
+  padding-right: 0px;
   padding-top: 16px;
 }
 
 .list {
-  flex: 1 0 0px;
+  flex: 1 1 0px;
 }
 
 .messageBar {
